test/files/neg/t6082.scala
class annot(notValue: String) extends annotation.ClassfileAnnotation
@annot("") class C